; ModuleID = '/home/carl/AnghaBench/postgres/src/test/regress/extr_pg_regress.c_split_to_stringlist.c'
source_filename = "/home/carl/AnghaBench/postgres/src/test/regress/extr_pg_regress.c_split_to_stringlist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32**)* @split_to_stringlist to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @split_to_stringlist(i8* %0, i8* %1, i32** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32** %2, i32*** %6, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* @pg_strdup(i8* %9)
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = call i8* @strtok(i8* %11, i8* %12)
  store i8* %13, i8** %8, align 8
  br label %14

14:                                               ; preds = %17, %3
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %14
  %18 = load i32**, i32*** %6, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = call i32 @add_stringlist_item(i32** %18, i8* %19)
  %21 = load i8*, i8** %5, align 8
  %22 = call i8* @strtok(i8* null, i8* %21)
  store i8* %22, i8** %8, align 8
  br label %14

23:                                               ; preds = %14
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 @free(i8* %24)
  ret void
}

declare dso_local i8* @pg_strdup(i8*) #1

declare dso_local i8* @strtok(i8*, i8*) #1

declare dso_local i32 @add_stringlist_item(i32**, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
